test_programs/compile_failure/macro_unquote_captured_closure/src/main.nr
comptime fn make_adder() -> Quoted {
    let offset = 1;
    let f = |x: Field| x + offset;
    quote { $f }
}

fn main(x: Field) -> pub Field {
    let f = make_adder!();
    f(x)
}
